<resources>
    <string name="app_name">Musicatiba</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_pasword">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="register">Register</string>
    <string-array name="months">
        <item>Select month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="recovery_code">Enter 4 Digit Recovery Code</string>
    <string name="recovery_des">The Recovery Code was sent to your mobile number. \n please enter the code: </string>
    <string name="password_reset">Password Reset \n Successful</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>

    <string name="profile_info">Profile Information</string>
    <string name="instruments">Instruments</string>
    <string name="reminder">Reminders</string>
    <string name="reset_password">Reset Password</string>


    <string name="piano">Piano</string>
    <string name="scale">Scale</string>
    <string name="melody">Melody</string>
    <string name="chord">Chord</string>
    <string name="passage">Passage/Pattern</string>
    <string name="press">Press</string>
    <string name="set_tempo">set tempo</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="enter_email_id">Please enter your Email</string>
    <string name="enter">Enter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="app_desc">Metronome is a simple metronome app that is designed to be easy to use and look nice. To keep this app free to use without ads and support the development of other apps like it, please consider making a donation using the button below.</string>

    <string name="action_donate">Donate</string>
    <string name="action_github">GitHub</string>
    <string name="action_play_store">Play Store</string>

    <string name="bpm">%1$s BPM</string>

    <string name="title_beep">Beep</string>
    <string name="title_click">Click</string>
    <string name="title_ding">Ding</string>
    <string name="title_wood">Wood</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="title_about">About</string>
    <string name="title_contributors">Contributors</string>
    <string name="title_theme_light">Light Theme</string>
    <string name="title_theme_wood">Wooden Theme</string>
    <string name="title_theme_dark">Dark Theme</string>
    <string name="title_theme_amoled">Amoled Theme</string>

    <string name="tewtwenteyonepx">Kevin Aguilar</string>
    <string name="tewtwenteyonepx_desc">Special thanks to Kevin Aguilar for making this app\'s icon. Kevin Aguilar is the founder of 221 Pixels, a design service that specializes in iconography and user interfaces.</string>

    <string name="library_aesthetic">Aesthetic - Aidan Follestad</string>
    <string name="library_aesthetic_desc">A fast and easy to use plug-and-play dynamic theme engine. Powered by Rx, for Android apps.</string>
    <string name="title_libraries">Libraries</string>

    <string name="notification_title">Metronome is running…</string>
    <string name="notification_desc">Touch to stop.</string>
    <string name="msg_add_shortcut">Do you want to add this shortcut to your home screen?</string>
    <string name="title_add_shortcut">Add To Home Screen</string>
    <string name="msg_purchase_refresh_error">Network error: couldn\'t get purchase data.</string>
    <string name="title_pro_key">Pro Key</string>
    <string name="title_no_connection">No Connection :(</string>
    <string name="title_use_anyway">Use Anyway</string>
    <string name="msg_pro_key">This app is completely free to download and use, and it contains absolutely no advertisements. However, this means that I need another method of making a profit. In order to allow me to keep making great (and most importantly, free) apps like this one, please consider buying the \'pro key\' using the button below. This dialog does not limit the functionality of this app; you can press \'use anyway\' to ignore this message and continue using the app as normal. Buying the pro key will remove these dialogs.</string>
    <string name="library_glide">Glide - Bump Technologies</string>
    <string name="library_glide_desc">An image loading and caching library for Android focused on smooth scrolling.</string>
    <string name="title_get_premium">Get Pro Key: %s</string>
    <string name="library_dialogs">Material Dialogs - Aidan Follestad</string>
    <string name="library_dialogs_desc">A beautiful, fluid, and customizable dialogs API.</string>

</resources>
