<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.developer.musicatiiva.fragments.ResetPasswordFragment" />
    </data>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/editetxt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:hint="@string/email"
        android:gravity="center|left"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="@dimen/_15sdp"
        android:imeOptions="actionNext"
        android:background="@drawable/btn_background_border"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editetxt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:hint="@string/password"

        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:inputType="text"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/_15sdp"
        android:imeOptions="actionNext"
        android:background="@drawable/btn_background_border"
        tools:ignore="Autofill"
        android:layout_below="@+id/editetxt_email"/>

    <EditText
        android:id="@+id/editetxt_newpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:hint="@string/new_password"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:inputType="text"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/_15sdp"
        android:imeOptions="actionNext"
        android:background="@drawable/btn_background_border"
        tools:ignore="Autofill"
        android:layout_below="@+id/editetxt_password"/>
    <EditText
        android:id="@+id/editetxt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:hint="Confirm Password"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:inputType="text"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGrey"
        android:textSize="@dimen/_15sdp"
        android:imeOptions="actionNext"
        android:background="@drawable/btn_background_border"
        tools:ignore="Autofill"
        android:layout_below="@+id/editetxt_newpassword"/>

    <Button
        android:id="@+id/btn_resetsubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/editetxt_confirm_password"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/lato_bold"
        android:onClick="@{()->data.OnSubmit()}"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15sdp" />

</RelativeLayout>

</layout>