<?xml version="1.0" encoding="utf-8"?>


<layout>

    <data>
        <variable
            name="data"
            type="com.developer.musicatiiva.fragments.InstrumentsOptionsFragments" />
    </data>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/scale_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/btn_background_border"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/lato_regular"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/imageview_next"/>

            <ImageView
                android:id="@+id/imageview_next"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@mipmap/ic_next"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/melody_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/scale_relativelayout"
        android:background="@drawable/btn_background_border"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melody"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/imageview_melodynext"/>

        <ImageView
            android:id="@+id/imageview_melodynext"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@mipmap/ic_next"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chord_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="@{()->data.onChordLayoutClicked()}"
        android:layout_below="@+id/melody_relativelayout"
        android:background="@drawable/btn_background_border"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chord"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/imageview_chordynext"/>

        <ImageView
            android:id="@+id/imageview_chordynext"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@mipmap/ic_next"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/passage_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:padding="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/chord_relativelayout"
        android:background="@drawable/btn_background_border"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passage"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@+id/imageview_passageynext"/>

        <ImageView
            android:id="@+id/imageview_passageynext"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@mipmap/ic_next"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>





</RelativeLayout>

</layout>